# Warhammer-40k-RPG

./: CMakeLists.txt  README.md
include/enemy/: enemies.h  enemy.h
include/enemy/tyranids/: carnifex.h  hormagaunt.h  termagaunt.h  tyranid.h
include/events/: battle.h  game.h
include/events/enemy/: enemyevents.h
include/events/player/: playerevents.h
include/items/: item.h
include/player/: player.h
include/utility/: faith.h  hp.h  levelling.h  stats.h  types.h
include/weapons/: weapon.h  weapons.h
include/weapons/melee/: chainsword.h
include/weapons/ranged/: boltpistol.h  stormbolter.h
src/: main.cpp
src/enemy/: enemy.cpp
src/enemy/tyranids/: carnifex.cpp  hormagaunt.cpp  termagaunt.cpp  tyranid.cpp
src/events/: battle.cpp  game.cpp
src/events/enemy/: enemyevents.cpp
src/events/player/: playerevents.cpp
src/player/: player.cpp
src/utility/: faith.cpp  hp.cpp  levelling.cpp  stats.cpp
src/weapons/: weapon.cpp
src/weapons/melee/: chainsword.cpp
src/weapons/ranged/: boltpistol.cpp  stormbolter.cpp
