cmake_minimum_required(VERSION 3.28.0)
project(warhammer-rpg)
include_directories(include)
add_executable(warhammer 
       src/main.cpp
       src/player/player.cpp
       src/utility/faith.cpp
       src/utility/hp.cpp
       src/utility/levelling.cpp
       src/utility/stats.cpp
       src/events/battle.cpp
       src/enemy/enemy.cpp
       src/enemy/tyranids/tyranid.cpp
       src/enemy/tyranids/carnifex.cpp
       src/enemy/tyranids/hormagaunt.cpp
       src/enemy/tyranids/termagaunt.cpp
       src/weapons/melee/chainsword.cpp
       src/weapons/ranged/boltpistol.cpp
       src/weapons/ranged/stormbolter.cpp
       src/weapons/weapon.cpp)
